[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.52"
reqwest = { version = "0.11", features = ["json"] }
teloxide = { version = "0.5", features = ["macros", "auto-send"] }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
